Fixed the size of the main document links and turned on flex wrap.

--- a/My_Portfolio/styles.css
+++ b/My_Portfolio/styles.css
@@ -108,6 +108,7 @@ nav {
   height: 12rem;
   width: 70%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   color: whitesmoke;
@@ -115,8 +116,8 @@ nav {
 
 .resume-link {
   background-color: var(--red);
-  height: 80%;
-  width: 25%;
+  height: 150px;
+  width: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,8 +125,8 @@ nav {
 }
 .myWork-link {
   background-color: var(--turquoise);
-  height: 80%;
-  width: 25%;
+  height: 150px;
+  width: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -133,8 +134,8 @@ nav {
 }
 .mySkill-link {
   background-color: var(--khaki);
-  height: 80%;
-  width: 25%;
+  height: 150px;
+  width: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
